--- a/training/training.ipynb
+++ b/training/training.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "8e2e34dc-37b9-4c37-80d1-3e2012d2aeb0",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
        "68"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "340b7f6c-aab3-4ad6-bf47-69bcc9d31b94",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
        "54.400000000000006"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,8 +123,152 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "9f3450c0-a4b2-4615-bef6-2f915fe5993b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_ds = dataset.take(54)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "279374df-3e10-44c0-99aa-1848246c46c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "54"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train_ds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "433c2f2e-4494-4336-bd45-5063a1d6a818",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_ds = dataset.skip(54)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "fa17511f-79f5-4c16-8da7-62d9ab7b308f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(test_ds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8f241c87-9501-4484-a053-13fa018b3790",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val_ds = test_ds.take(6)\n",
+    "len(val_ds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "21d79846-9a74-4df1-bd4a-17a51f25ffbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_ds = test_ds.skip(6)\n",
+    "len(test_ds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8e075f8d-0394-48de-839c-81cd91a907a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_ds = train_ds.cache().shuffle(1000).prefetch(buffer_size=tf.data.AUTOTUNE)\n",
+    "val_ds = val_ds.cache().shuffle(1000).prefetch(buffer_size=tf.data.AUTOTUNE)\n",
+    "test_ds = test_ds.cache().shuffle(1000).prefetch(buffer_size=tf.data.AUTOTUNE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5e4d416b-78e7-412f-b8f2-3588e32fb280",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resize_and_scale = tf.keras.Sequential([\n",
+    "    layers.Resizing(IMAGE_SIZE,IMAGE_SIZE),\n",
+    "    layers.Rescaling(1.0/255)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b2cfc1e5-4a3d-499e-9c89-bcb42cb3d655",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_augmentation = tf.keras.Sequential([\n",
+    "    layers.RandomFlip(\"horizontal_and_vertical\"),\n",
+    "    layers.RandomRotation(0.2)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "452610f3-40fb-41bd-838b-e4cad67daf6d",
+   "id": "cb9a7f41-3cee-45b9-b168-905ea70b2fae",
    "metadata": {},
    "outputs": [],
    "source": []
